--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "dependencies": {
     "@celo/contractkit": "^2.0.0",
     "@golevelup/ts-jest": "^0.3.3",
-    "@nestjs/common": "^7.6.15",
+    "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/jwt": "^8.0.1",
-    "@nestjs/mongoose": "^9.1.0",
-    "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/core": "^9.0.11",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
@@ -48,7 +48,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
