--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
     "@types/passport-jwt": "^3.0.6",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bip39-light": "^1.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-mongo": "^4.6.0",
+    "ethers": "^5.7.0",
     "express-session": "^1.17.3",
     "firebase-admin": "^10.2.0",
     "mongoose": "^6.3.5",
@@ -65,6 +67,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "ethers-typescript-typings": "^0.0.4",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
@@ -107,7 +110,9 @@
       "kotanicore/core/(.*)": "<rootDir>/libs/core/src/$1",
       "kotanicore/core": "<rootDir>/libs/core/src",
       "@kotanicore/services/(.*)": "<rootDir>/libs/services/src/$1",
-      "@kotanicore/services": "<rootDir>/libs/services/src"
+      "@kotanicore/services": "<rootDir>/libs/services/src",
+      "@kotanicore/integrations/(.*)": "<rootDir>/libs/integrations/src/$1",
+      "@kotanicore/integrations": "<rootDir>/libs/integrations/src"
     }
   }
 }
